2001-08-17  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Include bonobo-config-ditem.[ch] and
	bonobo-config-ditem-utils.[ch] in the library.

	* gnome-desktop-item.c: Call the code from bonobo-config-ditem.c
	directly rather than via the moniker.

2001-08-17  Martin Baulig  <baulig@suse.de>

	* gnome-ditem.[ch]: Renamed to gnome-desktop-item.[ch].

2001-08-12  Martin Baulig  <baulig@suse.de>

	* gnome-ditem.h (gnome_desktop_item_get_location): Make
	the return value non-const.

2001-08-06  Martin Baulig  <baulig@suse.de>

	* gnome-ditem.[ch]: Fix #includes for the new location.

	* Makefile.am: New file.
