@@ -1,3 +1,8 @@
+2001-08-18  Martin Baulig  <baulig@suse.de>
+
+	* gnome-desktop-item.c (gnome_desktop_item_get_tryexec):
+	New function.
+
 2001-08-17  Martin Baulig  <baulig@suse.de>
 
 	* Makefile.am: Include bonobo-config-ditem.[ch] and
